--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7202;http://localhost:8888",
       "environmentVariables": {
